multi_yaml/src/snapshots/multi_yaml__test__empty_doc_preserve_src.snap
---
source: multi_yaml/src/lib.rs
expression: doc

---
MultiYaml {
    items: [
        YamlDoc {
            line_start: 8,
            line_end: 10,
            content: "\nname: \"kittie\"",
        },
    ],
}
