multi_yaml/src/snapshots/multi_yaml__test__single_doc_with_prefix_padding.snap
---
source: multi_yaml/src/lib.rs
expression: srcs

---
MultiYaml {
    items: [
        YamlDoc {
            line_start: 3,
            line_end: 10,
            content: "kind: Topic\nname: Run screen shot tests\ndeps:\n  - global-node\n  - global-yarn\nsteps:\n  - github-checkin",
        },
    ],
}
